fitgram-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitgram-service
spec:
  selector:
    app: fitgram
  ports:
    - protocol: TCP
    port: 80
    targetPort: 3000
