fitgram.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitgram-deployment
  labels:
    app: fitgram
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fitgram
  template:
    metadata:
      labels:
        app: fitgram
    spec:
      containers:
        - name: fitgram
          image: jamesmjkim/fitgram-app:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: fg-service
  labels:
    app: fitgram
spec:
  type: LoadBalancer
  selector:
    app: fitgram
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30010
