ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
spec:
  rules:
    - host: 'app.com'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service-1
                port:
                  number: 80
    - host: 'docs.app.com'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service-2
                port:
                  number: 80
    - host: 'app.com'
      http:
        paths:
          - pathType: Prefix
            path: '/auth'
            backend:
              service:
                name: service-3
                port:
                  number: 80
